--- a/rebar.config
+++ b/rebar.config
@@ -73,6 +73,7 @@
 %% Rebar3 currently supports git and hg
 {deps, [
     %% {rebar, {git, "https://github.com/rebar/rebar.git", {branch, "master"}}}
+    {eda, {git, "https://github.com/ruanpienaar/eda", {branch, "master"}}}
 ]}.
 
 
@@ -183,11 +184,19 @@
 %% == Releases ==
 
 {relx, [{release, { interlay_io, "0.0.1"},
-         [ interlay_io ]},
-
+         [ cowlib,
+           eda,
+           gun,
+           ranch,
+           interlay_io,
+           runtime_tools,
+           observer,
+           wx
+         ]},
         {dev_mode, true},
         {include_erts, false},
-
+        {vm_args, "config/vm.args"},
+        {sys_config, "config/sys.config"},
         {extended_start_script, true}]
 }.
 
