--- a/rebar.config
+++ b/rebar.config
@@ -107,7 +107,7 @@
 %% directories where OTP applications for the project can be located
 {project_app_dirs, ["apps/*", "lib/*", "."]}.
 %% Directories where source files for an OTP application can be found
-{src_dirs, ["$PWD/apps/interlay_io/src", "src"]}.
+{src_dirs, ["apps/interlay_io/src", "src"]}.
 %% Paths to miscellaneous Erlang files to compile for an app
 %% without including them in its modules list
 %%{extra_src_dirs, []}.
